<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cortrium_secondary_grey">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/top_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cortrium_secondary_black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_na"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="9dp"
            android:text="@string/label_bpm"
            android:textAlignment="center"
            android:textColor="@color/cortrium_primary_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/heart_rate"
            app:layout_constraintRight_toRightOf="@+id/heart_rate"
            app:layout_constraintTop_toBottomOf="@+id/heart_rate" />

        <TextView
            android:id="@+id/respiration_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_na"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView10"
            app:layout_constraintRight_toRightOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_bpm"
            android:textColor="@color/cortrium_primary_light"
            app:layout_constraintLeft_toLeftOf="@+id/respiration_rate"
            app:layout_constraintRight_toRightOf="@+id/respiration_rate"
            app:layout_constraintTop_toBottomOf="@+id/respiration_rate" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_ambient_temperature"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintLeft_toRightOf="@+id/textView10"
            app:layout_constraintRight_toLeftOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/label_celsius"
            android:textColor="@color/cortrium_primary_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/temperature_ambient"
            app:layout_constraintRight_toRightOf="@+id/temperature_ambient"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temperature_ambient" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_zero"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="@+id/textView16"
            app:layout_constraintRight_toRightOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/label_percentage"
            android:textColor="@color/cortrium_primary_light"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/oximeter_measurement"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/oximeter_measurement"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/oximeter_measurement" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_score"
            android:textColor="@color/cortrium_primary_light"
            app:layout_constraintLeft_toLeftOf="@+id/textView17"
            app:layout_constraintRight_toRightOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_respiration_rate"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            app:layout_constraintRight_toLeftOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/temperature_ambient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_na"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView13"
            app:layout_constraintRight_toRightOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_early_warning"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintLeft_toRightOf="@+id/textView13"
            app:layout_constraintRight_toLeftOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_device_bodyposition"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_heart_rate"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_oximeter"
            android:textColor="@color/cortrium_primary_light"
            android:textSize="11sp"
            app:layout_constraintLeft_toRightOf="@+id/textView16"
            app:layout_constraintRight_toLeftOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/oximeter_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_na"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/device_bodyposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_na"
            android:textColor="@color/cortrium_secondary_white"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="@+id/textView19"
            app:layout_constraintRight_toRightOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

    </android.support.constraint.ConstraintLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/ecg1_plot"
        style="@style/FullScreenGraph.Minimalist.Light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ecg2_plot"
        app:layout_constraintTop_toBottomOf="@+id/top_info"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/ecg1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_textview"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/label_ecg1"
        app:layout_constraintRight_toRightOf="@+id/ecg1_plot"
        app:layout_constraintTop_toTopOf="@+id/ecg1_plot"/>


    <com.androidplot.xy.XYPlot
        android:id="@+id/ecg2_plot"
        style="@style/FullScreenGraph.Minimalist.Light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecg1_plot"
        app:layout_constraintLeft_toLeftOf="@+id/ecg1_plot"
        app:layout_constraintBottom_toTopOf="@+id/ecg3_plot"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/ecg2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_textview"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/label_ecg2"
        app:layout_constraintRight_toRightOf="@+id/ecg2_plot"
        app:layout_constraintTop_toTopOf="@+id/ecg2_plot"/>

    <com.androidplot.xy.XYPlot
        android:id="@+id/ecg3_plot"
        style="@style/FullScreenGraph.Minimalist.Light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecg2_plot"
        app:layout_constraintLeft_toLeftOf="@+id/ecg2_plot"
        app:layout_constraintBottom_toTopOf="@+id/respiration_plot"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_textview"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/label_ecg3"
        app:layout_constraintRight_toRightOf="@+id/ecg3_plot"
        app:layout_constraintTop_toTopOf="@+id/ecg3_plot"/>

    <com.androidplot.xy.XYPlot
        android:id="@+id/respiration_plot"
        style="@style/FullScreenGraph.Minimalist.Light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteX="85dp"
        tools:layout_conversion_absoluteY="427dp"
        tools:layout_conversion_absoluteWidth="299dp"
        tools:layout_conversion_absoluteHeight="84dp"
        app:layout_constraintTop_toBottomOf="@+id/ecg3_plot"
        app:layout_constraintLeft_toLeftOf="@+id/ecg3_plot"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/respiration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_textview"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        android:text="@string/label_resp"
        android:textAlignment="center"

        app:layout_constraintRight_toRightOf="@+id/respiration_plot"
        app:layout_constraintTop_toTopOf="@+id/respiration_plot" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:tint="@color/cortrium_secondary_white"
        app:backgroundTint="@color/cortrium_primary_dark"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="56dp" />

</android.support.constraint.ConstraintLayout>